# NYC-Taxi-Data-Pipeline

./: .env  .env.ci  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  code_quality.yaml
clickhouse/config.d/: config.xml
clickhouse/docker-entrypoint-initdb.d/: 00-create-dim-locations-table.sh  01-create-fact-trips-table.sh
compose/: compose.ds.yaml  compose.dw.yaml  compose.etl.yaml  compose.serving.yaml
dagster/: Dockerfile  compose.dagster.yaml  requirements.txt
dagster_home/: dagster.yaml  workspace.yaml
metabase/: Dockerfile
pipeline/: Dockerfile  requirements.txt  spark-defaults.conf
pipeline/dbt_nyc/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
pipeline/dbt_nyc/models/: sources.yml
pipeline/dbt_nyc/models/report/: payment_count_per_type.sql  pickup_zone_count.sql  total_income_per_day.sql  total_revenue_per_day.sql  total_tips_per_2_hours.sql  total_tips_per_day.sql  total_trip_per_day_and_hour.sql  total_trips_per_day.sql
pipeline/pipeline/: assets.py  constants.py  dbt.py  definitions.py  partitions.py  utils.py
pipeline/pipeline/asset_checks/: __init__.py  factory.py  silver_layer.py
pipeline/pipeline/assets/: bronze_layer.py  gold_layer.py  silver_layer.py  warehouse_layer.py
pipeline/pipeline/resources/: clickhouse_io_manager.py  file_downloader_resource.py  great_expectations_resource.py  minio_io_manager.py  mysql_io_manager.py  parquet_io_manager.py  spark_io_manager.py  utils.py
pipeline/pipeline_test/: test_defs.py
pipeline/pipeline_test/assets/: test_bronze_layer.py
scripts/: data_profiling.py  parquet2csv.py
scripts/database/: load_csv_to_mysql.sh  mysql_schema.sql  setup_mysql_and_create_schema.sh
spark/: Dockerfile  compose.spark.yaml  spark-defaults.conf
