[tool.poetry]
name = "nyc-taxi-data-pipeline"
version = "0.1.0"
description = ""
authors = ["tnhgiang <giang.tnhoang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"
polars = "^1.17.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["pipeline"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
