[tool.poetry]
name = "nyc-taxi-data-pipeline"
version = "0.1.0"
description = ""
authors = ["tnhgiang <giang.tnhoang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
tqdm = "^4.67.1"
polars = "^1.17.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
dagster = "1.9.3"
dagit = "1.9.3"
dagster-postgres = "0.25.3"
dagster-pyspark = "0.25.3"
polars = "1.17.1"
pyarrow = "18.1.0"
minio = "7.2.12"
sqlalchemy = "2.0.36"
cryptography = "44.0.0"
psycopg2-binary = "2.9.10"
pymysql = "1.1.1"
pytest = "8.3.4"
pyspark = "3.5.4"
geopandas = "1.0.1"
clickhouse-driver = "0.2.9"
dagster-dbt = "0.25.3"
dbt-clickhouse = "1.8.7"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
dagster = "1.9.3"
pytest = "^8.3.4"
minio = "7.2.12"
dagster-pyspark = "0.25.3"
polars = "1.17.1"
geopandas = "1.0.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["pipeline"]

[tool.pytest.ini_options]
testpaths = ["pipeline/pipeline_test"]

[tool.codespell]
skip = "*.svg"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
